# ocr-by-msmarkitdown-support-UI

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/models/: enums.py  schemas.py
backend/app/routes/: convert.py  history.py  upload.py
backend/app/services/: config_manager.py  fuzz_runner.py  history_service.py  llm_factory.py  log_service.py  postprocess_service.py  test_runner.py
backend/app/ws/: handler.py
frontend/: Dockerfile  bun.lockb  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: APISelectorPanel.tsx  BatchTestingPanel.tsx  ConfigPanel.tsx  Dashboard.tsx  ErrorTestingPanel.tsx  FileUploadPanel.tsx  FuzzTestingPanel.tsx  HistoryPanel.tsx  LLMProviderPanel.test.tsx  LLMProviderPanel.tsx  LogDisplay.tsx  OutputViewer.tsx  ProgressTracker.tsx  ResultSummary.tsx  StreamInfoPanel.tsx  URLInputPanel.tsx
frontend/src/hooks/: useLogStore.ts  useTestRunner.ts  useWebSocket.ts
frontend/src/services/: api.ts  historyApi.ts  websocket.ts
frontend/src/types/: enums.ts  index.ts
frontend/src/utils/: formatters.ts  persistence.ts  validators.ts
