[project]
name = "markitdown-test-ui-backend"
version = "0.1.0"
description = "FastAPI backend for MarkItDown Test UI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "markitdown[all]>=0.1.0",
    "pymupdf>=1.24.0",
    "hypothesis>=6.115.0",
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "openai>=1.54.0",
    "python-dotenv>=1.0.0",
    "websockets>=13.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
